fixed overflow issue

--- a/src/components/catalog/Catalog.css
+++ b/src/components/catalog/Catalog.css
@@ -100,7 +100,7 @@
   display: flex;
   justify-content: space-between;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
 
 .filter-panel {
@@ -172,7 +172,7 @@
 .grid-items {
   display: grid;
   margin: 0 100px;
-  padding: 40px 20px 20px 20px;
+  padding: 40px 0px;
   grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
 
   gap: 20px;
